# rpgp

./: Cargo.toml  README.md
examples/: hsm-key.rs
src/: errors.rs  line_writer.rs
src/armor/: writer.rs
src/composed/: cleartext.rs
src/composed/key/: builder.rs  public.rs  secret.rs  shared.rs
src/composed/message/: types.rs
src/composed/signed_key/: public.rs  secret.rs
src/crypto/: aead.rs  aes_kw.rs  dsa.rs  ecdh.rs  ecdsa.rs  ed25519.rs  ed448.rs  ml_dsa65_ed25519.rs  ml_dsa87_ed448.rs  ml_kem1024_x448.rs  ml_kem768_x25519.rs  rsa.rs  slh_dsa_shake128f.rs  slh_dsa_shake128s.rs  slh_dsa_shake256s.rs  x25519.rs  x448.rs
src/helper/: ecdsa.rs  rsa.rs
src/packet/: literal_data.rs  user_attribute.rs  user_id.rs
src/packet/key/: public.rs  secret.rs
src/packet/signature/: config.rs
src/types/: key_traits.rs  mpi.rs  pkesk.rs
src/types/params/: plain_secret.rs
src/types/params/public/: ecdh.rs  ed448.rs  ml_dsa87_ed448.rs  ml_kem1024_x448.rs  x448.rs
tests/: hsm-test.rs  key_test.rs  message_test.rs
