[package]
name = "pgp"
version = "0.14.0"
authors = ["dignifiedquire <dignifiedquire@gmail.com>"]
description = "OpenPGP implementation in Rust"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/rpgp/rpgp"
repository = "https://github.com/rpgp/rpgp"
readme = "README.md"
resolver = "2"

keywords = ["pgp", "gpg", "openpgp", "email", "encryption"]
categories = ["cryptography", "email"]

exclude = ["tests/tests/*"]

edition = "2021"
rust-version = "1.75"

[dependencies]
aes = "=0.9.0-pre.2"
argon2 = "=0.6.0-pre.1"
base64 = ">=0.21.7, < 0.23"
bitfield = "0.14"
block-padding = "^0.3.2"
blowfish = "=0.10.0-pre.2"
byteorder = "^1.4"
camellia = "=0.2.0-pre"
chrono = { version = "^0.4.23", default-features = false, features = ["clock", "std"] }
cast5 = "=0.12.0-pre"
cfb-mode = "=0.9.0-pre"
cipher = "=0.5.0-pre.7"
const-oid = "0.10.0-rc.3"
crc24 = "^0.1"
derive_builder = "^0.20.0"
des = "=0.9.0-pre.2"
digest = "=0.11.0-pre.9"
dsa = "=0.7.0-pre.1"
ecdsa = "=0.17.0-pre.9"
elliptic-curve = "0.14.0-rc.1"
hex = "^0.4"
idea = "=0.6.0-pre"
iter-read = "1"
log = "0.4.6"
md-5 = { version = "=0.11.0-pre.4", features = ["oid"] }
nom = "^7.0"
num_enum = ">=0.5.7, < 0.8"
num-traits = "0.2.6"
p256 = { version = "=0.14.0-pre.2", features = ["ecdsa", "ecdh"] }
p384 = { version = "=0.14.0-pre.2", features = ["ecdsa"] }
p521 = { version = "=0.14.0-pre.2", features = ["ecdsa", "ecdh"] }
k256 = { version = "=0.14.0-pre.2", features = ["ecdsa"] }
rand = "0.8"
ripemd = { version = "=0.2.0-pre.4", features = ["oid"] }
rsa = { version = "=0.10.0-pre.3" }
sha1 = { version = "=0.11.0-pre.4", features = ["oid"] }
sha1-checked = "=0.11.0-pre"
sha2 = { version = "=0.11.0-pre.4", features = ["oid"] }
sha3 = { version = "=0.11.0-pre.4", features = ["oid"] }
signature = "=2.3.0-pre.4"
smallvec = "1.8.0"
thiserror = "1.0.30"
twofish = "=0.8.0-pre"
zeroize = { version = "1.5", features = ["zeroize_derive"] }
getrandom = { version = "0.2", optional = true }
bstr = { version = "1.4.0", default-features = false, features = ["std"] }
hkdf = "=0.13.0-pre.4"
aes-gcm = "=0.11.0-pre.2"
eax = "=0.5.0"
ocb3 = "=0.1.0"
aes-kw = "=0.3.0-pre"
derive_more = { version = "1.0.0-beta.6", features = ["debug"] }
x448 = "0.6"

[dependencies.buffer-redux]
version = "1.0.0"
default-features = false

[dependencies.curve25519-dalek]
version = "4.1.3"
default-features = false
features = ["alloc", "precomputed-tables", "zeroize"]

[dependencies.ed25519-dalek]
version = "2.2.0-pre"
default-features = false
features = ["std", "zeroize", "fast"]

[dependencies.flate2]
version = "^1.0"
default-features = false
features = ["rust_backend"]

[dependencies.gperftools]
version = "0.2.0"
optional = true

[dependencies.num-bigint]
version = "0.8.1"
features = ["rand", "i128", "u64_digit", "prime", "zeroize"]
package = "num-bigint-dig"

[dependencies.x25519-dalek]
version = "2.0.1"
default-features = false
features = ["alloc", "precomputed-tables", "zeroize", "static_secrets"]

[dev-dependencies]
glob = "^0.3"
hex-literal = "^0.4"
pretty_assertions = "1"
pretty_env_logger = "0.5"
rand_chacha = "0.3"
rand_xorshift = "0.3"
regex = "^1.7"
#rpgp_0_10 = { version = "=0.10.2", package = "pgp" }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
nightly = ["rsa/nightly", "rand/nightly", "num-bigint/nightly"]
profile = ["gperftools"]
wasm = ["chrono/wasmbind", "getrandom", "getrandom/js"]

[profile.bench]
debug = 2

[[bench]]
name = "benches_main"
harness = false

[lib]
bench = false

[patch.crates-io]
camellia         = { git = "https://github.com/RustCrypto/block-ciphers.git" }
cast5            = { git = "https://github.com/RustCrypto/block-ciphers.git" }
idea             = { git = "https://github.com/RustCrypto/block-ciphers.git" }
twofish          = { git = "https://github.com/RustCrypto/block-ciphers.git" }

cfb-mode         = { git = "https://github.com/RustCrypto/block-modes.git" }

sha1-checked     = { git = "https://github.com/RustCrypto/hashes.git" }

aes-kw           = { git = "https://github.com/RustCrypto/key-wraps.git" }

eax              = { git = "https://github.com/RustCrypto/AEADs.git" }
ocb3             = { git = "https://github.com/RustCrypto/AEADs.git" }

curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek.git", branch = "rustcrypto-new-releases" }
ed25519-dalek    = { git = "https://github.com/dalek-cryptography/curve25519-dalek.git", branch = "rustcrypto-new-releases" }
x25519-dalek     = { git = "https://github.com/dalek-cryptography/curve25519-dalek.git", branch = "rustcrypto-new-releases" }
